corrected errors with ports in manifest

--- a/flask-app.yaml
+++ b/flask-app.yaml
@@ -17,9 +17,9 @@ metadata:
   name: flask-app
 spec:
   selector:
-    app: nginx
+    app: flask-app
   ports: 
   - protocol: TCP
-    port: 80
-    targetPort: 80
-  type: LoadBalancer
+    port: 5500
+    targetPort: 5500
+  type: ClusterIP
