added image policy to manifest

--- a/k8s-deployments/flask-app.yaml
+++ b/k8s-deployments/flask-app.yaml
@@ -34,5 +34,6 @@ spec:
       containers:
       - name: flask-container
         image: ethnicbadger/duo-flask:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 5500
