--- a/k8s-deployments/nginx.yaml
+++ b/k8s-deployments/nginx.yaml
@@ -34,5 +34,6 @@ spec:
       containers:
       - name: nginx-container
         image: ethnicbadger/duo-nginx:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
