fixed nginx.yaml I hope

--- a/k8s-deployments/nginx.yaml
+++ b/k8s-deployments/nginx.yaml
@@ -13,8 +13,8 @@ spec:
 ---
 apiVersion: v1
 kind: ConfigMap
-metadata: nginx-config
-  name: 
+metadata: 
+  name: nginx-config
 data:
   nginx.conf: |
     events {}
